// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should correctly render Expenses Summary with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    13
     
    expenses
     totalling 
    $456,251.23
  </h1>
</div>
`;

exports[`Should correctly render Expenses Summary with one expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $23.56
  </h1>
</div>
`;
